# python-fakelish

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  README.md  RELEASE.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: lint.yml  tests.yml
src/fakelish/: __init__.py  console.py  fakelish.py  word-probability.json
tests/: test_fakelish.py
