[metadata]
name = fakelish
description = English-like word generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scrool/fakelish
author = Pavol Babinčák
author_email = scroolik@gmail.com
maintainer = Pavol Babinčák
maintainer_email = scroolik@gmail.com
license = MIT
license_file = LICENSE
license_files =
    LICENSE
platforms =
    Any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/scrool/fakelish/issues

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fakelish = fakelish.console:main

[options.extras_require]
release =
    build
    twine
test =
    pytest>=6
    tox

[options.package_data]
fakelish = word-probability.json

[flake8]
max-line-length = 88
extend-ignore = E203
